        bin/AST_CRON_audio_3_ftp.pl,
        bin/AST_CRON_audio_3_ftp_FTPSSL.pl,
        bin/AST_CRON_audio_3_newftp.pl,
        bin/AST_CRON_audio_4_ftp2.pl,
        bin/AST_CRON_audio_4_ftp2_FTPSSL.pl,
        bin/AST_CRON_purge_recordings.pl,
        bin/AST_conf_update.pl,
        bin/AST_manager_kill_hung_congested.pl,
        bin/AST_vm_update.pl
  * Add upstream Rev. 2998: 
   - Changed  bin/VD_email_inbound.pl,
      www/agc/conf_exten_check.php,
      www/agc/vicidial.php,
      www/vicidial/lead_report_export.php: Added code to not allow XFER emails
        to go to user who transferred.
  * Add upstream Rev. 2999:
    - Changed: UPGRADE,
      extras/MySQL_AST_CREATE_tables.sql,
      extras/upgrade_2.14.sql,
      www/agc/dispo_send_email.php,
      www/agc/vdc_db_query.php,
      www/agc/vicidial.php,
      www/vicidial/admin.php,
      www/vicidial/help_documentation.txt: Added instructions for Dead
        Trigger URL.
    - New: extras/mysql_update/mysql-1534.sql.

2.25.27
  [Jörg Fring-Fürst]
  * Correct typo:
    - www/agc/vicidial.php,
      www/vicidial/admin.php.
  * Release 2.25.27 2018-06-05.

2.25.26
  [Jörg Frings-Fürst]
  * www/vicidial/AST_stat_agent1.php:
    - Add Campaign status.
  * New LICENSE.
  * New license/AGPLv3.
  * New silence files with length 1 - 10 sec..
  * New DB-Schema 1533:
    - New extras/mysql_update/mysql-1533.sql.
    - Changed extras/upgrade_2.14.sql,
      extras/MySQL_AST_CREATE_tables.sql.
  * New function AutoAnswer (2018-007):
    - Changed www/vicidial/admin.php,
      agi/agi-VDAD_ALL_inbound.agi,
      bin/ADMIN_keepalive_ALL.pl,
      bin/AST_update.pl,
      extras/MySQL_AST_CREATE_tables.sql,
      extras/mysql_update/mysql-1533.sql,
      extras/upgrade_2.14.sql,
      www/agc/vicidial.php.
  * bin/ADMIN_backup.pl:
    - Add /etc/flyingpenguin.
  * Change license to AGPLv3:
    - Changed bin/ADMIN_backup.pl,
      www/vicidial/AST_stat_agent1.php,
      agi/agi-record_prompts.agi,