@@ -28,7 +28,7 @@
         bin/AST_manager_kill_hung_congested.pl,
         bin/AST_vm_update.pl
   * Add upstream Rev. 2998: 
-   - Changed  bin/VD_email_inbound.pl,
+   - Changed: bin/VD_email_inbound.pl,
       www/agc/conf_exten_check.php,
       www/agc/vicidial.php,
       www/vicidial/lead_report_export.php: Added code to not allow XFER emails
@@ -44,6 +44,8 @@
       www/vicidial/help_documentation.txt: Added instructions for Dead
         Trigger URL.
     - New: extras/mysql_update/mysql-1534.sql.
+  * Add upstream Rev. 3000:
+    - Changed: www/vicidial/admin.php: Fix for issue #1108
 
 2.25.27
   [Jörg Fring-Fürst]
